deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: red
  name: red
  annotations:
    #konghq.com/plugins: rate-limit-by-ip-5-min
    #konghq.com/plugins: prometheus
spec:
  type: ExternalName
  externalName: gateway
  ports:
  - port: 8080
